# Syncly

./: .gitignore  .syncly.json  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
core/: Cargo.toml  Makefile
core/src/: main.rs
core/src/commands/: initialize.rs  mod.rs  reset.rs  sync.rs
core/src/config/: mod.rs
core/src/display/: mod.rs
core/src/state/: mod.rs
snapshots/: Cargo.toml
snapshots/src/: lib.rs
snapshots/src/state/: mod.rs
snapshots/src/storage/: mod.rs
snapshots/src/utils/: mod.rs
snapshots/src/watcher/: mod.rs
snapshots/tests/: lib_test.rs
src/: main.rs  utils.rs
test_src/: test.file
