[package]
name = "syncly"
version = "0.1.0"
edition = "2021"

[dependencies]
color-print = "0.3.6"
clap = "4.5.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
snapshots = { path = "../snapshots" }

# indicatif = "0.17.9" # for progress bar in case we need it
